@@ -467,7 +467,7 @@ enum MS_JOIN_TYPE {MS_JOIN_ONE_TO_ONE, MS_JOIN_ONE_TO_MANY};
 #define MS_MULTIPLE 1
 
 enum MS_QUERY_MODE {MS_QUERY_SINGLE, MS_QUERY_MULTIPLE};
-enum MS_QUERY_TYPE {MS_QUERY_IS_NULL, MS_QUERY_BY_POINT, MS_QUERY_BY_RECT, MS_QUERY_BY_SHAPE, MS_QUERY_BY_ATTRIBUTE, MS_QUERY_BY_INDEX, MS_QUERY_BY_OPERATOR, MS_QUERY_BY_FILTER};
+enum MS_QUERY_TYPE {MS_QUERY_IS_NULL, MS_QUERY_BY_POINT, MS_QUERY_BY_RECT, MS_QUERY_BY_SHAPE, MS_QUERY_BY_ATTRIBUTE, MS_QUERY_BY_INDEX, MS_QUERY_BY_FILTER};
 
 enum MS_ALIGN_VALUE {MS_ALIGN_LEFT, MS_ALIGN_CENTER, MS_ALIGN_RIGHT}; 
 
@@ -774,8 +774,6 @@ typedef struct {
   char *str;
 
   expressionObj *filter; /* by filter */
-
-  int op; /* by GEOS operator */
 
   int slayer; /* selection layer, used for msQueryByFeatures() (note this is not a query mode per se) */
 } queryObj;
@@ -1853,7 +1851,6 @@ MS_DLL_EXPORT int msQueryByPoint(mapObj *map);
 MS_DLL_EXPORT int msQueryByRect(mapObj *map);
 MS_DLL_EXPORT int msQueryByFeatures(mapObj *map);
 MS_DLL_EXPORT int msQueryByShape(mapObj *map);
-MS_DLL_EXPORT int msQueryByOperator(mapObj *map);
 MS_DLL_EXPORT int msQueryByFilter(mapObj *map);
 
 MS_DLL_EXPORT int msGetQueryResultBounds(mapObj *map, rectObj *bounds);
